--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_base">BaseActivity</string>
 
+    <string name="basic_playback">Basic Playback </string>
+
 
 
     <string name="unknown_error">An unknown error occurred.</string>
